<resources>
    <string name="app_name">BuildGainz</string>
    <string name="buildGainz_String">BuildGainz</string>
    <string name="logoFor_App">Logo For App</string>
    <string name="motto">It is a shame to grow old without seeing the beauty and strength of which their body is capable.</string>
    <string name="get_Started">GET STARTED</string>
    <string name="moto">motto</string>
    <string name="welcome">Welcome to BuildGainz</string>
    <string name="signInContinue">Sign in to continue</string>
    <string name="your_email">Your Email</string>
    <string name="your_current_password">Your Current Password</string>
    <string name="your_password">Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="need_acc">Need an account?</string>
    <string name="sign_up_now">"" Sign Up now</string>
    <string name="create_acc">Create an new account</string>
    <string name="lets_get_started">Let’s Get Started</string>
    <string name="sign_up">Sign Up</string>
    <string name="full_name">Full Name</string>
    <string name="re_enter_your_password">Re-Enter Your Password</string>
    <string name="sign_in_now"> " " Sign In now</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="eyeButton">eyeBtn</string>
    <string name="enter_password">Please enter your password email address. You will receive a link creative a new password via email.</string>
    <string name="continueButton">Continue</string>
    <string name="back_button">Back Button</string>
    <string name="dashboard">Dashboard</string>
    <string name="profile_button">Profile Button</string>
    <string name="setting_button">Setting Button</string>
    <string name="logout">Logout</string>
    <string name="delete_account">Delete Account</string>
    <string name="change_password">Change Password</string>
    <string name="change_pwd_head">Please enter your credential before \n changing password.</string>
    <string name="delete_pwd_head">Please enter your credential before \n deleting user.</string>
    <string name="your_new_pass">Your New Password*</string>
    <string name="again_your_new_pass">Again Your New Password*</string>

    <string name="update_pass">Update Password</string>
    <string name="authenticate">Authenticate</string>
    <string name="not_verified">Your are not authenticated/verified yet!</string>
    <string name="textViewOfAuthenticate">You are authenticated/verified. And You can change your password now!</string>
    <string name="textViewOfDeleteAuthenticate">You are authenticated/verified. And You can delete your account now!</string>

    <string name="delete_user">Delete User</string>
    <string name="skip">Skip</string>
    <string name="profile">Profile</string>
    <string name="change_profile_pic">Change Profile Picture</string>
    <string name="upload_profile_pic">Upload Profile Picture</string>
    <string name="push">Push</string>
    <string name="pull">Pull</string>
    <string name="body">Body</string>
    <string name="dumbbell">Dumbbell</string>
    <string name="machine">Machine</string>
    <string name="expert">Expert</string>
    <string name="static_exercise">Static</string>
    <string name="moderate">Moderate</string>
    <string name="profile_pic">Profile Pic</string>
    <string name="personal_data">Personal Data</string>
    <string name="gender">Gender</string>
    <string name="female">Female</string>
    <string name="male">Male</string>
    <string name="level">Level</string>
    <string name="beginner">Beginner</string>
    <string name="your_goals">Your goals</string>
    <string name="intermediate">Intermediate</string>
    <string name="advanced">Advanced</string>
    <string name="losing_weight">Losing Weight</string>
    <string name="build_muscle">Build Muscle</string>
    <string name="body_recomposition">Body Recomposition</string>
    <string name="save">Save</string>
    <string name="change_profile_picture">Change Profile Pic</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="choose_picture">Choose Picture</string>
    <string name="welcome_user">Welcome,</string>
    <string name="loading">Loading…</string>
    <string name="exercise_plan">Exercise Plan</string>
    <string name="name">name:</string>
    <string name="exercise_image">Exercise Image</string>
    <string name="force">force</string>
    <string name="mechanic">mechanic</string>
    <string name="equipment">equipment</string>
    <string name="primary_muscle">primary muscle</string>
    <string name="secondary_muscle">Secondary Muscle</string>
    <string name="exercise_list">Exercise List</string>
    <string name="arrow_forward">arrow forward</string>
    <string name="arrow_back">arrow back</string>
    <string name="exercise">Exercise</string>
    <string name="unit">Cm</string>
    <string name="femaleText">Female</string>
    <string name="age">Age</string>
    <string name="startingHeight">170</string>
    <string name="startingWeight">55</string>
    <string name="startingAge">22</string>
    <string name="todo">TODO</string>
    <string name="height">Height</string>
    <string name="calculate_your_bmi">Calculate Your BMI</string>
    <string name="calculate_your_bmr">Calculate Your BMR</string>
    <string name="calculate_iwc">Calculate IW</string>
    <string name="weight">Weight</string>
    <string name="_22">22</string>
    <string name="your_bmi_category_is">Your BMI Category Is</string>
    <string name="recalculate">RECALCULATE</string>
    <string name="calculator">Calculator</string>
    <string name="result_bmi">Result BMI</string>
    <string name="result_bmr">Result BMR</string>
    <string name="result_iw">Result IW</string>
    <string name="bmi">Body Mass Index</string>
    <string name="bmr">Basal Metabolic Rate</string>
    <string name="iwc">Ideal Weight Calculator</string>
    <string name="calories_day">calories/day</string>
    <string name="need_energy">You need energy of</string>
    <string name="the_ideal_weight">The ideal weight for you is</string>
    <string name="kgs">kgs</string>
    <string name="tracking">Step Tracking</string>
    <string name="steps">Steps</string>
    <string name="goals">Goal: 8500 </string>
    <string name="_0_m">0 M</string>
    <string name="_0">0</string>
    <string name="exercise_plans">Exercise Plans</string>
    <string name="choose_your_plan">Choose Your Plan</string>
    <string name="_3_day_plan">3 Day Plan</string>
    <string name="_4_day_plan">4 Day Plan</string>
    <string name="_5_day_plan">5 Day Plan</string>
    <string name="_6_day_plan">6 Day Plan</string>


    <string name="day_1_workout_a">Day 1: Workout A</string>
    <string name="day_2_workout_b">Day 2: Workout B</string>
    <string name="day_3_workout_c">Day 3: Workout C</string>
    <string name="day_4_workout_d">Day 4: Workout D</string>
    <string name="day_5_workout_e">Day 5: Workout E</string>
    <string name="day_6_workout_f">Day 6: Workout F</string>

    <string name="day_2_off">Day 2: Off</string>
    <string name="day_3_workout_b">Day 3: Workout B</string>
    <string name="day_4_off">Day 4: Off</string>
    <string name="day_5_workout_c">Day 5: Workout C</string>
    <string name="day_7_off">Day 7: Off</string>
    <string name="day_6_off">Day 6: Off</string>
    <string name="day_7_workout_d">Day 7: Workout D</string>
</resources>