<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    tools:context=".DashBoard.ExercisePlan.ExercisesActivity"
    android:scrollbars="vertical"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/grey">


            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarExercise"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:layout_marginBottom="20sp"
                        android:fontFamily="@font/cooper"
                        android:gravity="start|center_vertical"
                        android:text="@string/exercise_list"
                        android:textColor="@color/white"
                        android:textSize="36sp" />

                </RelativeLayout>


            </androidx.appcompat.widget.Toolbar>
        </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5sp"
            >

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15sp"
                android:background="@drawable/search_view_background"
                android:scrollbarStyle="insideInset"
                app:iconifiedByDefault="false" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="11sp"
                android:layout_weight="1"
                android:onClick="push"
                android:text="@string/push"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="11sp"
                android:layout_weight="1"
                android:onClick="pull"
                android:text="@string/pull"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="11sp"
                android:layout_weight="1"
                android:onClick="static_exercise"
                android:text="@string/static_exercise"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="11sp"
                android:layout_weight="1"
                android:onClick="body"
                android:text="@string/body"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="11sp"
                android:layout_weight="1"
                android:onClick="dumbbell"
                android:text="@string/dumbbell"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="11sp"
                android:layout_weight="1"
                android:onClick="machine"
                android:text="@string/machine"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <Button
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="11sp"
                android:layout_weight="1"
                android:onClick="Beginner"
                android:text="@string/beginner"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="11sp"

                android:layout_weight="1"
                android:onClick="Intermediate"
                android:text="@string/intermediate"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

            <Button
                android:layout_width="0sp"
                android:layout_height="wrap_content"
                android:layout_marginStart="12sp"
                android:layout_marginEnd="11sp"
                android:layout_weight="1"
                android:onClick="Expert"
                android:text="@string/expert"
                tools:ignore="ButtonStyle,VisualLintButtonSize" />

        </LinearLayout>
    </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerExercise"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


    </LinearLayout>
</ScrollView>