<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/grey"
    android:orientation="vertical"
    tools:context=".loginPageActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="50sp"
        android:orientation="horizontal">

        <View
            android:id="@+id/logoForAppli"
            android:layout_width="70dp"
            android:layout_height="70sp"
            android:layout_gravity="center"
            android:background="@drawable/logo_for_app_bg" />

        <TextView
            android:id="@+id/appNameInLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cooper"
            android:gravity="center_horizontal|center_vertical"
            android:text="@string/app_name"
            android:textAppearance="@style/AppTheme"
            android:textColor="@color/grey_app_name"
            android:textSize="24sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="180sp"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/cooper"
            android:gravity="center"
            android:text="@string/welcome"
            android:textAppearance="@style/AppTheme"
            android:textColor="@color/grey_app_name"
            android:textSize="30sp"

            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10sp"
            android:gravity="center"
            android:text="@string/signInContinue"
            android:textAppearance="@style/AppTheme"
            android:textColor="@color/grey_app_name"
            android:textSize="20sp"

            />

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="280sp"
        android:layout_marginEnd="10sp"
        app:cardCornerRadius="30sp"
        app:cardElevation="20sp"

        >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center_horizontal"
            android:orientation="vertical"
            android:padding="10sp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:autofillHints=""
                android:drawableStart="@drawable/email_icon"
                android:drawablePadding="16sp"
                android:hint="@string/your_email"
                android:inputType="textEmailAddress"
                android:minHeight="48dp"
                android:textSize="14sp"
                tools:ignore="VisualLintTextFieldSize" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10sp"
        android:layout_marginTop="370sp"
        android:layout_marginEnd="10sp"
        app:cardCornerRadius="30sp"
        app:cardElevation="20sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10sp">

            <EditText
                android:layout_width="match_parent"
                android:layout_height="48sp"
                android:autofillHints=""
                android:drawableStart="@drawable/lock_icon"
                android:drawablePadding="16sp"
                android:hint="@string/your_password"
                android:inputType="textPassword"
                android:minHeight="48dp"
                android:textSize="14sp"
                tools:ignore="VisualLintTextFieldSize" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="fill_parent"
        android:layout_marginBottom="200sp"
        android:gravity="center"
        android:orientation="horizontal">

        <Button
            android:id="@+id/signInBtn"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:layout_marginStart="20sp"
            android:layout_marginEnd="20sp"
            android:fontFamily="@font/cooper"
            android:gravity="center"
            android:letterSpacing="0.12"
            android:text="@string/sign_in"
            android:textSize="35sp"
            android:textStyle="bold" />

    </LinearLayout>


    <TextView
        android:id="@+id/forgot_pass"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginTop="550dp"
        android:gravity="center_horizontal|center_vertical"
        android:text="@string/forgot_password"
        android:textAppearance="@style/forgot_pass" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10sp"
        android:gravity="center_horizontal"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/needAcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="623dp"
            android:text="@string/need_acc"
            android:textAppearance="@style/signupbtn"


            />

        <TextView
            android:id="@+id/signUpBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="623dp"
            android:text="@string/sign_up_now"
            android:textAppearance="@style/signupbtn"
            android:textColor="#4191DD"

            />

    </LinearLayout>
</RelativeLayout>